# NomadFlowCode

./: .env.example  .gitignore  Makefile  README.md  dist-workspace.toml
_bmad/_config/: agent-manifest.csv  files-manifest.csv  manifest.yaml  workflow-manifest.csv
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/gds/: config.yaml
_bmad/tea/: config.yaml
cli/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
cli/source/: app.tsx  cli.tsx
cli/source/components/: Breadcrumb.tsx  FeatureCard.tsx  Header.tsx
cli/source/lib/: api-client.ts  config.ts  state.ts  tmux.ts  types.ts
cli/source/screens/: FeatureCreate.tsx  FeaturePicker.tsx  RepoPicker.tsx  Resume.tsx  ServerPicker.tsx  StatusView.tsx
docs/: .dockerignore  Dockerfile  pnpm-lock.yaml
docs/app/: global.css  layout.tsx
docs/app/(home)/: page.tsx
docs/app/(home)/privacy/: page.tsx
docs/app/(home)/support/: page.tsx
docs/app/(home)/terms/: page.tsx
docs/app/docs/[[...slug]]/: page.tsx
docs/app/og/docs/[...slug]/: route.tsx
docs/components/: install-command.tsx  logo.tsx
docs/content/docs/: cli.mdx  concepts.mdx  contributing.mdx  getting-started.mdx  index.mdx  meta.json
docs/content/docs/mobile/: index.mdx  usage.mdx
docs/content/docs/server/: api.mdx  authentication.mdx  configuration.mdx  index.mdx  meta.json  tunnel.mdx
docs/lib/: layout.shared.tsx
nomadflow-rs/: Cargo.toml  Makefile
nomadflow-rs/crates/nomadflow-core/: Cargo.toml
nomadflow-rs/crates/nomadflow-core/src/: config.rs  error.rs  lib.rs  models.rs  shell.rs
nomadflow-rs/crates/nomadflow-core/src/services/: git.rs  mod.rs  tmux.rs  ttyd.rs
nomadflow-rs/crates/nomadflow-relay/: Cargo.toml  Dockerfile
nomadflow-rs/crates/nomadflow-relay/deploy/: Caddyfile  docker-compose.yml
nomadflow-rs/crates/nomadflow-relay/src/: main.rs
nomadflow-rs/crates/nomadflow-server/: Cargo.toml
nomadflow-rs/crates/nomadflow-server/src/: auth.rs  display.rs  lib.rs  state.rs  tunnel.rs
nomadflow-rs/crates/nomadflow-server/src/routes/: features.rs  health.rs  mod.rs  repos.rs  terminal.rs
nomadflow-rs/crates/nomadflow-tui/: Cargo.toml
nomadflow-rs/crates/nomadflow-tui/src/: api_client.rs  app.rs  event.rs  lib.rs  state.rs  tmux_local.rs
nomadflow-rs/crates/nomadflow-tui/src/screens/: attaching.rs  feature_create.rs  feature_picker.rs  mod.rs  repo_picker.rs  resume.rs  server_add.rs  server_picker.rs  setup.rs
nomadflow-rs/crates/nomadflow-tui/src/widgets/: breadcrumb.rs  header.rs  mod.rs
nomadflow-rs/crates/nomadflow-ws/: Cargo.toml
nomadflow-rs/crates/nomadflow-ws/src/: lib.rs
nomadflow-rs/src/: main.rs
nomadflowcode/: README.md  app.json  eas.json  global.css  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
nomadflowcode/android/: settings.gradle
nomadflowcode/android/app/: build.gradle
nomadflowcode/android/app/src/main/: AndroidManifest.xml
nomadflowcode/android/app/src/main/java/com/fab_uleuh/nomadflowcode/: MainActivity.kt  MainApplication.kt
nomadflowcode/android/app/src/main/java/com/kawantech/nomadflowcode/: MainActivity.kt  MainApplication.kt
nomadflowcode/android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
nomadflowcode/app/: _layout.tsx  add-server.tsx  features.tsx  index.tsx  repos.tsx  settings.tsx  terminal.tsx
nomadflowcode/assets/images/: logo.jsx
nomadflowcode/components/: terminal-shortcuts.tsx
nomadflowcode/components/ui/: button.tsx  card.tsx
nomadflowcode/ios/: Podfile
nomadflowcode/ios/NomadFlow/: Info.plist  SplashScreen.storyboard
nomadflowcode/ios/NomadFlow.xcodeproj/: project.pbxproj
nomadflowcode/ios/NomadFlow.xcodeproj/xcshareddata/xcschemes/: NomadFlow.xcscheme
nomadflowcode/ios/NomadFlow.xcworkspace/: contents.xcworkspacedata
nomadflowcode/ios/NomadFlow/Images.xcassets/SplashScreenBackground.colorset/: Contents.json
nomadflowcode/ios/NomadFlow/Supporting/: Expo.plist
nomadflowcode/ios/nomadflowcode/: Info.plist
nomadflowcode/ios/nomadflowcode.xcodeproj/: project.pbxproj
nomadflowcode/ios/nomadflowcode.xcodeproj/xcshareddata/xcschemes/: nomadflowcode.xcscheme
nomadflowcode/ios/nomadflowcode.xcworkspace/: contents.xcworkspacedata
nomadflowcode/lib/: server-commands.ts  shared-types.ts  theme.ts
nomadflowcode/lib/context/: storage-context.tsx
nomadflowcode/lib/types/: index.ts
server/: requirements.txt  start.sh
server/nomadflow/: __init__.py  auth.py  config.py  main.py
server/nomadflow/models/: __init__.py  requests.py  responses.py
server/nomadflow/repositories/: __init__.py
server/nomadflow/routers/: __init__.py  features.py  repos.py  terminal.py
server/nomadflow/services/: __init__.py  git_service.py  tmux_service.py  ttyd_service.py
server/nomadflow/utils/: __init__.py  shell.py
