[workspace]
members = [
    "crates/nomadflow-core",
    "crates/nomadflow-server",
    "crates/nomadflow-tui",
]
resolver = "2"

[package]
name = "nomadflow"
version = "0.1.0"
edition = "2021"
description = "Git worktree + tmux workflow manager"
license = "MIT"
repository = "https://github.com/fab-uleuh/NomadFlowCode.git"
homepage = "https://github.com/fab-uleuh/NomadFlowCode.git"

[[bin]]
name = "nomadflow"
path = "src/main.rs"

[dependencies]
nomadflow-core = { path = "crates/nomadflow-core" }
nomadflow-server = { path = "crates/nomadflow-server" }
nomadflow-tui = { path = "crates/nomadflow-tui" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
color-eyre = "0.6"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
