[workspace]
members = [
    "crates/nomadflow-core",
    "crates/nomadflow-server",
    "crates/nomadflow-tui",
    "crates/nomadflow-relay",
    "crates/nomadflow-ws",
]
resolver = "2"

[package]
name = "nomadflow"
version = "1.0.0"
edition = "2021"
description = "Git worktree + tmux workflow manager"
license = "MIT"
repository = "https://github.com/fab-uleuh/NomadFlowCode.git"
homepage = "https://github.com/fab-uleuh/NomadFlowCode.git"

[[bin]]
name = "nomadflow"
path = "src/main.rs"

[dependencies]
nomadflow-core = { path = "crates/nomadflow-core" }
nomadflow-server = { path = "crates/nomadflow-server" }
nomadflow-tui = { path = "crates/nomadflow-tui" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
color-eyre = "0.6"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
