[package]
name = "nomadflow-server"
version = "0.1.0"
edition = "2021"

[dependencies]
nomadflow-core = { path = "../nomadflow-core" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-tungstenite = "0.26"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
futures-util = "0.3"
color-eyre = "0.6"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
qrcode = "0.14"
bore-cli = "0.6"
local-ip-address = "0.6"
urlencoding = "2"
rand = "0.9"
subtle = "2"
nomadflow-ws = { path = "../nomadflow-ws" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = "1"
tempfile = "3"
