[package]
name = "nomadflow-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
nomadflow-core = { path = "../nomadflow-core" }
ratatui = "0.30"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
color-eyre = "0.6"

[dev-dependencies]
tempfile = "3"
